src/test/deca/context/valid/superMethodCall.deca
class A {
int x;
}

class B extends A{
}

{
B b = new B();
int x = b.x;
}
