src/test/deca/context/invalid/if_int.deca
{
int x;
if (1) {
x = 4;
}
}
